--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+.Form{
+  align-items: center;
+  margin: auto;
+  padding: auto;
+}
+.label{
+  font-style:italic;
+  padding: auto;
+  margin: auto;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
