--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Form{
+  align-items: center;
+  margin: auto;
+  padding: auto;
+}
+.label{
+  font-style:italic;
+  padding: auto;
+  margin: auto;
+}
